miniextendr-macros/tests/ui/non_rnative_arg.stderr
error[E0277]: the trait bound `NotRNative: TryFromSexp` is not satisfied
 --> tests/ui/non_rnative_arg.rs:8:18
  |
8 | fn takes_bad(_x: NotRNative) -> i32 {
  |                  ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `TryFromSexp` is not implemented for `NotRNative`
 --> tests/ui/non_rnative_arg.rs:5:1
  |
5 | struct NotRNative;
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `TryFromSexp`:
            &'static RLogical
            &'static Rcomplex
            &'static f64
            &'static i32
            &'static mut RLogical
            &'static mut Rcomplex
            &'static mut f64
            &'static mut i32
          and $N others
